Observaciones Santos Noviembre - Ajustes grid - Cambio de formularios a 2 columnas en web - Cambios de textos - Custom videoplayer - Grid de frases

--- a/src/app/guudcomponents/menu/langmenu/langmenu.component.scss
+++ b/src/app/guudcomponents/menu/langmenu/langmenu.component.scss
@@ -7,10 +7,11 @@
   height: 2.2rem;
   color: #1b4544;
   #langicon {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
     text-align: center;
     opacity: .7;
+    display: inline-block;
     &:hover {
       cursor: pointer;
     }
