--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -1,29 +1,28 @@
 <div class="displayshadow">
   <div class="display col-11 col-lg-12 col-xl-9 col-xxl-7 m-auto">
-    <br>
     <div class="row">
       <div class="col-12">
-        <h1 i18n>We are GUUD people,</h1>
-        <h4 i18n style="line-height: 2.7rem;">gathering the best knowledge for human well-being.</h4>
+        <h1 i18n style="margin-top: 2rem;">We are GUUD people,</h1>
+        <h1 i18n style="margin-bottom: 3rem;">gathering the best knowledge for human well-being.</h1>
         <h4 i18n><img class="inputdeco" src="assets/logos_icons/Arrow.webp" alt="clip" width="60" height="60"> The secrets of your future are hidden in your daily habits.</h4>
-        <h4 i18n style="line-height: 2.7rem;"><div style="font-size: 4.4rem;display: inline;left: 0.05rem;position: relative;bottom: -0.2rem;">0</div>ur purpose: <br> is create wellness and happiness around the world!</h4>
+        <h4 i18n style="line-height: 2.7rem;"><img alt="iconMission" src="assets/images/Our.webp" style="height: 2rem;filter: brightness(50%);"> <br> is to create wellness and happiness!!!</h4>
       </div>
     </div>
     <div class="icons row">
       <div class="col-12 col-md-4">
-        <img alt="iconMission" src="assets/logos_icons/Mission.webp" class="svgic" width="80" height="80">
-        <h3 i18n>Mission:</h3>
-        <h5 i18n style="line-height: 1.6rem;">Hack your brain<br>+<br>shape your body</h5>
+        <img alt="iconMission" src="assets/logos_icons/Mission.webp" class="svgic" width="60" height="60">
+        <h3 i18n style="color: #68e242;">Mission:</h3>
+        <h5 i18n style="line-height: 2.6rem;">Hack your brain + Shape your body</h5>
       </div>
       <div class="col-12 col-md-4">
-        <img alt="iconVision" src="assets/logos_icons/Visión.webp" class="svgic" width="110" height="110" style="margin-bottom: -1.9rem;position: relative;bottom: 0.8rem;">
-        <h3 i18n>Vision:</h3>
-        <h5 i18n style="line-height: 2rem;">Let's find the Guud in YOU.<br>Let's Go!</h5>
+        <img alt="iconVision" src="assets/logos_icons/Visión.webp" class="svgic" width="90" height="90" style="margin-bottom: -1.9rem;position: relative;bottom: 0.8rem;">
+        <h3 i18n style="color: #68e242;">Vision:</h3>
+        <h5 i18n style="line-height: 2rem;">Let's find the Guud in YOU.</h5>
       </div>
       <div class="col-12 col-md-4">
-        <img alt="iconCoreValues" src="assets/logos_icons/Core Values.webp" class="svgic" width="80" height="80">
-        <h3 i18n>Core values:</h3>
-        <h5 i18n style="line-height: 1.6rem;">Passion & Innovation</h5>
+        <img alt="iconCoreValues" src="assets/logos_icons/Core Values.webp" class="svgic" width="60" height="60">
+        <h3 i18n style="color: #68e242;">Core values:</h3>
+        <h5 i18n style="line-height: 2.6rem;">Passion, Innovation & Humbleness</h5>
       </div>
     </div>
     <div class="row">
