--- a/src/app/views/caring/caring.component.html
+++ b/src/app/views/caring/caring.component.html
@@ -3,12 +3,12 @@
 <br>
     <div class="row" style="margin-bottom: -2rem;">
       <div class="col-12">
-        <br><br>
-        <h6 i18n style="font-size: 4.8rem;margin-bottom: 3.2rem;line-height: 4.1rem;">In order to Create a GUUD world,</h6>
+        <br><br><br><br>
+        <h6 i18n style="font-size: 4.8rem;margin-bottom: 2.2rem;line-height: 4.1rem;">We believe that in-order to create a GUUD world,</h6>
         <h4 i18n style="line-height: 2.8rem;">the first step is helping educate and form GUUD human beings</h4>
       </div>
     </div>
-
+    <br>
     <div class="row">
       <div class="col-12 m-auto">
         <div class="caringdisplay row">
@@ -26,7 +26,7 @@
           </div>
         </div>
 <br>
-        <h5 i18n>Our main focus is to help an organization that is devoted in the well-being of people.</h5>
+        <h5 i18n>Our main focus is helping organizations devoted in the well-being of people.</h5>
       </div>
     </div>
     <br>
