--- a/src/assets/guudstyles/_variables.scss
+++ b/src/assets/guudstyles/_variables.scss
@@ -1,7 +1,7 @@
 $mainfont: Exo;
 $secondaryfont: Verveine, Exo;
-$gray-font: #707070;
-$blue-font: #1b4544;
+$gray-font: #707070;//#b7b7b7;
+$blue-font: #707070;//#b7b7b7;//#1b4544;
 $shadowcolor: #d4d4d4;
 $mainbackground: #fff;
 $greybackground: #f0f0f0;
