--- a/src/app/guudcomponents/footer/footer.component.html
+++ b/src/app/guudcomponents/footer/footer.component.html
@@ -1,12 +1,18 @@
 <div style="position: relative;background-color: #f8f8f8;">
   <div class="row" style="margin:0;">
-    <div class="col-sm-12 col-md-6"><div class="rights">GUUD&#174; 2023 <span class="separator"></span> <span i18n>All rights reserved</span><span class="separator"></span> <span i18n>Notice of Privacy</span></div></div>
     <div class="col-sm-12 col-md-6">
-      <div class="row" style="white-space: nowrap;font-weight:bold;color:#1B4544;line-height: 4rem;">
+      <div class="rights"><img src="assets/logos_icons/G.webp" alt="GUUD Wishes" width="25" height="25" style="position: relative;bottom: 3px;">GUUD&#174; 2023 <span class="separator"></span> <span i18n>All rights reserved</span><span
+          class="separator"></span> <span i18n>Notice of Privacy</span></div>
+    </div>
+    <div class="col-sm-12 col-md-6">
+      <div class="row" style="white-space: nowrap;color:#707070;line-height: 4rem;">
         <div class="col-sm-12 col-md-3 col-lg-3 offset-md-0 offset-lg-3" i18n>Download the app:</div>
         <div class="col-sm-6 col-md-4 col-lg-3"><a href="https://apps.apple.com/us/app/guud/id1592139422"><img src="assets/logos_icons/AppStore.webp" alt="App Store" style="height: 3rem;width: 11.4rem;" i18n></a></div>
         <div class="col-sm-6 col-md-4 col-lg-3"><a href="https://play.google.com/store/apps/details?id=com.garsaholding.guud"><img src="assets/logos_icons/Google-Play.webp" alt="Play Store" style="height: 3rem;width: 9.8rem;" i18n></a></div>
       </div>
     </div>
+  </div>
+  <div class="mobdisplay">
+    <br><br>
   </div>
 </div>
