--- a/src/app/guudcomponents/menu/langmenu/langmenu.component.html
+++ b/src/app/guudcomponents/menu/langmenu/langmenu.component.html
@@ -1,8 +1,9 @@
 
 <div class="langmenu">
   <input type="checkbox" id="langmenu-trigger" style="display: none;" [(ngModel)]="_langmenuOpened">
-  <label class="langNavigation" for="langmenu-trigger">
+  <label class="langNavigation" for="langmenu-trigger" style="width: 4rem;position: relative;right: 1.4rem;">
     <img alt="langmenu" id="langicon" src="assets/logos_icons/sphere.webp"  width="35" height="35">
+    <span style="display: inline-block;margin-left: 0.5rem;top: 0.2rem;position: relative;color:#707070;" i18n>EN</span>
   </label>
   <ul class="langlist">
     <li i18n (click)="changeLang('es')">Spanish</li>
