--- a/src/app/guudcomponents/menu/topbar/topbar.component.html
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.html
@@ -6,20 +6,20 @@
         <div class="col-2">
           <img [routerLink]="'/'" src="assets/logos_icons/logo-Guud.webp" width="160" height="80" alt="Logo" class="logo" i18n-alt i18n-src *ngIf="currentRoute!='/' || isMobile == false">
         </div>
-        <div class="col-1 webdisplay" routerLinkActive="activeElement" routerLink="/aboutus"><span i18n>About us</span></div>
-        <div class="col-1 webdisplay" routerLinkActive="activeElement" routerLink="/history"><span i18n>History</span></div>
-        <div class="col-1 webdisplay" routerLinkActive="activeElement" routerLink="/caring"><span i18n>Caring & giving</span></div>
-        <div class="col-1 webdisplay" routerLinkActive="activeElement" routerLink="/guudideas"><span i18n>Ideas</span></div>
+        <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/aboutus"><span i18n>About us</span></div>
+        <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/history"><span i18n>History</span></div>
+        <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/caring"><span i18n>Caring & giving</span></div>
+        <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/guudideas"><span i18n>Ideas</span></div>
 
-        <div class="col-2 webdisplay">
+        <div class="col-2 webmenu">
           <div class="row">
             <div class="col-6 bluefont" routerLinkActive="activeElement" routerLink="/supplier"><span i18n>Supplier</span></div>
             <div class="col-6 bluefont" routerLinkActive="activeElement" routerLink="/coach"><span i18n>Coach</span></div>
           </div>
         </div>
-        <div class="col-2 webdisplay">
+        <div class="col-2 webmenu">
           <div class="row">
-            <div class="col-4" style="font-size: 0.8rem;font-weight: bold;line-height: 1.6rem;"><span i18n>Follow us!</span></div>
+            <div class="col-4" style="font-size: 0.8rem;line-height: 1.6rem;"><span i18n>Follow us!</span></div>
             <div class="col-8">
               <div class="socialbar">
                 <span class="icon-facebook bubble"></span>
