--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -11,27 +11,50 @@
   </div>
 </div -->
 
-<div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094; height: 114.6vh;">
-  <div class="guudvideo">
-    <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight" webkit-playsinline playsinline></video>
-  </div>
-  <div class="coachbanner m-auto">
-    <img src="assets/logos_icons/Coach-Woman.webp" alt="GUUD Model" id="model">
-    <img src="assets/logos_icons/Cell-Coach.webp" alt="APP Coaches" id="app">
-
-    <div class="bannermessage">
+<div [ngClass]="{'displayshadow':_apply}" style="background-color: ##c8c8c894;overflow-y: scroll;">
+  <br><br><br>
+  <div class="row">
+    <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-6 m-auto">
       <div class="row">
-        <div class="col-12">
-          <div class="row" id="join">
-            <div class="col-12" i18n style="transform: scale(1.4, 0.9);">BECOME A COACH</div>
+        <div class="col-10 m-auto">
+          <div class="guudvideo">
+            <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight" webkit-playsinline playsinline></video>
           </div>
-          <div class="row">
-            <div class="col-6"><a href="https://apps.apple.com/us/app/guud-coach/id6449237809"><img src="assets/logos_icons/AppStore.webp" alt="App Store"></a></div>
-            <div class="col-6" style="position: relative;right: 0.7rem;"><a href="https://play.google.com/store/apps/details?id=com.garsaholding.guudcoach.dev"><img src="assets/logos_icons/Google-Play.webp" alt="Play Store"></a></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-10 text-center m-auto">
+          <h1>Coach</h1>
+          <h4>lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+          <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at diam sit amet orci ultrices finibus. Sed maximus quam nec felis tempus gravida. Proin ornare orci a libero facilisis, sit amet vehicula magna gravida. Pellentesque id convallis metus. Ut fringilla massa et justo aliquet lacinia. Sed augue est, rhoncus vel dui ac, cursus gravida dolor. Nunc quis quam nisi. Donec imperdiet posuere libero et pharetra</h5>
+        </div>
+      </div>
+      <br><br>
+      <div class="row">
+        <div class="col-12 m-auto">
+          <div class="coachbanner m-auto">
+            <img src="assets/logos_icons/Coach-Woman.webp" alt="GUUD Model" id="model">
+            <img src="assets/logos_icons/Cell-Coach.webp" alt="APP Coaches" id="app">
+
+            <div class="bannermessage">
+              <div class="row">
+                <div class="col-12">
+                  <div class="row" id="join">
+                    <div class="col-12" i18n style="transform: scale(1.4, 0.9);">BECOME A COACH</div>
+                  </div>
+                  <div class="row">
+                    <div class="col-6"><a href="https://apps.apple.com/us/app/guud-coach/id6449237809"><img src="assets/logos_icons/AppStore.webp" alt="App Store"></a></div>
+                    <div class="col-6" style="position: relative;right: 0.7rem;"><a href="https://play.google.com/store/apps/details?id=com.garsaholding.guudcoach.dev"><img src="assets/logos_icons/Google-Play.webp" alt="Play Store"></a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
     </div>
-
   </div>
+
+<br><br><br>
 </div>
