--- a/src/app/views/coach/coach.component.scss
+++ b/src/app/views/coach/coach.component.scss
@@ -5,15 +5,13 @@
   }
 }
 .coachbanner {
-  position: absolute;
-  top: 94vh;
-  width: 90%;
+  position: relative;
+  width: 100%;
   height: 11.8rem;
   background-color: #000000;
   border-radius: 1.5rem;
   padding: 1rem;
   overflow: hidden;
-  left: 5%;
   z-index: 1;
 
   #model {
