--- a/src/app/views/supplier/supplier.component.html
+++ b/src/app/views/supplier/supplier.component.html
@@ -1,6 +1,9 @@
 <div class="displayshadow">
   <div class="col-sm-12 col-md-10 col-lg-9 col-xl-8 col-xxl-7 m-auto">
     <div class="row" style="margin: auto;">
+      <div class="col-xl-6 col-md-5 col-sm-4 m-auto" *ngIf="isMobile==false">
+        <img alt="GUUD Supplier" src="assets/images/Guud-Supplier-icon.webp" style="position: relative;width: 100%;margin: auto;display: block;">
+      </div>
       <div class="col-xl-6 col-md-7 col-sm-8 m-auto">
         <guudform-besupplier></guudform-besupplier>
       </div>
