--- a/src/assets/guudstyles/_menus.scss
+++ b/src/assets/guudstyles/_menus.scss
@@ -50,7 +50,7 @@
 
   .burgertoggler {
     width: 2rem;
-    position: absolute;
+    position: fixed;
     right: 1.1rem;
     top: 1.1rem;
     &#closeburguer {
