Seccion con informacion sobre borrado de cuenta

--- a/src/app/views/caring/caring.component.html
+++ b/src/app/views/caring/caring.component.html
@@ -25,8 +25,8 @@
             <img src="assets/images/Foto-3.webp" alt="GUUD display">
           </div>
         </div>
-<br>
-        <h5 i18n>Our main focus is helping organizations devoted in the well-being of people.</h5>
+
+        <h5 style="margin-top: 5vw;" i18n>Our main focus is helping organizations devoted in the well-being of people.</h5>
       </div>
     </div>
     <br>
