Se ocultan secciones

--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -22,13 +22,13 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <!--div class="row">
         <div class="col-10 text-center m-auto">
           <h1>Coach</h1>
           <h4>lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
           <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at diam sit amet orci ultrices finibus. Sed maximus quam nec felis tempus gravida. Proin ornare orci a libero facilisis, sit amet vehicula magna gravida. Pellentesque id convallis metus. Ut fringilla massa et justo aliquet lacinia. Sed augue est, rhoncus vel dui ac, cursus gravida dolor. Nunc quis quam nisi. Donec imperdiet posuere libero et pharetra</h5>
         </div>
-      </div>
+      </div-->
       <br><br>
       <div class="row">
         <div class="col-12 m-auto">
