cursor hover en menu

--- a/src/app/guudcomponents/menu/topbar/topbar.component.html
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.html
@@ -10,13 +10,15 @@
         <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/history"><span i18n>History</span></div>
         <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/caring"><span i18n>Caring & giving</span></div>
         <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/guudideas"><span i18n>Ideas</span></div>
+        <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/supplier"><span i18n>Supplier</span></div>
+        <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/coach"><span i18n>Coach</span></div>
 
-        <div class="col-2 webmenu">
+        <!--div class="col-2 webmenu">
           <div class="row">
             <div class="col-6 bluefont" routerLinkActive="activeElement" routerLink="/supplier"><span i18n>Supplier</span></div>
             <div class="col-6 bluefont" routerLinkActive="activeElement" routerLink="/coach"><span i18n>Coach</span></div>
           </div>
-        </div>
+        </div-->
         <div class="col-2 webmenu">
           <div class="row">
             <div class="col-4" style="font-size: 0.8rem;line-height: 1.6rem;"><span i18n>Follow us!</span></div>
