--- a/src/app/views/history/history.component.html
+++ b/src/app/views/history/history.component.html
@@ -1,12 +1,12 @@
-<div [ngClass]="{'displayshadow':_apply}" style="background-color: ##c8c8c894;overflow-y: scroll;">
+<div [ngClass]="{'displayshadow':_apply}" style="background-color: ##c8c8c894;">
   <br><br><br>
+  <div class="guudvideo">
+    <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight" webkit-playsinline playsinline></video>
+  </div>
   <div class="row">
     <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-6 m-auto">
       <div class="row">
         <div class="col-12">
-          <div class="guudvideo">
-            <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight" webkit-playsinline playsinline></video>
-          </div>
         </div>
       </div>
       <!--div class="row">
