--- a/src/assets/guudstyles/guudstyles.scss
+++ b/src/assets/guudstyles/guudstyles.scss
@@ -13,6 +13,13 @@
 .vjs-control-bar {
   background-color: #fff !important;
 }
+
+.vjs-control-bar {
+  height: 0 !important;
+  //width: 71.8%;
+  margin: auto;
+}
+
 [class*="amp-controlbaricons"] {
   display: none;
 }
@@ -76,10 +83,12 @@
 
 .guudvideo {
   position: relative;
-  height: 37rem;
+  height: 48.6rem;
+  width: 74%;
+  margin: auto;
   [id*="videoplayerhistory"]{
     width: 100%;
-    height: 97%;
+    height: 100%;
   }
   .amp-logo {
     display: none;
