--- a/src/app/guudcomponents/menu/topbar/topbar.component.html
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.html
@@ -12,7 +12,9 @@
         <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/guudideas"><span i18n>Ideas</span></div>
         <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/supplier"><span i18n>Supplier</span></div>
         <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/coach"><span i18n>Coach</span></div>
-
+        <div class="col-1 webmenu">
+          <guud-tutosmenu></guud-tutosmenu>
+        </div>
         <!--div class="col-2 webmenu">
           <div class="row">
             <div class="col-6 bluefont" routerLinkActive="activeElement" routerLink="/supplier"><span i18n>Supplier</span></div>
@@ -33,7 +35,8 @@
           </div>
         </div>
         <div class="col-8 mobdisplay"></div>
-        <div class="col-2">
+        <div class="col-1">
+          <!-- guud-tutosmenu></guud-tutosmenu -->
           <guud-burguermenu></guud-burguermenu>
           <guud-langmenu></guud-langmenu>
         </div>
