--- a/src/assets/guudstyles/_menus.scss
+++ b/src/assets/guudstyles/_menus.scss
@@ -136,5 +136,6 @@
     right: 0.7rem;
     -webkit-box-shadow: 0 14px 10px -15px #C4C4C4;
     box-shadow: 0 14px 10px -15px #C4C4C4;
+    max-height: 100vh;
   }
 }
