Estilos en secciones informativas para las apps

--- a/src/app/views/deleteacc/deleteacc.component.html
+++ b/src/app/views/deleteacc/deleteacc.component.html
@@ -1,6 +1,6 @@
 <div class="deleteacc">
 
-  <h1 style="padding-top: 1pt;padding-left: 184pt;text-indent: 0pt;text-align: center;">Borrado de Cuenta</h1>
+  <h1 style="padding-top: 1pt;text-indent: 0pt;text-align: left;">Borrado de Cuenta</h1>
   <p style="padding-top: 9pt;padding-left: 5pt;text-indent: 0pt;line-height: 108%;text-align: justify;">Este Acuerdo de Licencia de Uso es el acuerdo integrado y exclusivo celebrado entre usted (el Usuario) y GUUD en relación con los productos y
     servicios de la gestión de salud proporcionados por GUUD. El acuerdo es legalmente vinculante en sus comportamientos de uso de la aplicación o servicio de GUUD. Por lo tanto, le pedimos que lea las cláusulas del acuerdo (los menores de edad
     deberán leer el acuerdo acompañados por un tutor). Si no acepta alguna de las cláusulas del acuerdo, le rogamos que no instale, duplique o utilice el producto o servicio de GUUD. El hecho de que el usuario haga clic en el botón
