--- a/src/app/guudcomponents/menu/burguermenu/burguermenu.component.scss
+++ b/src/app/guudcomponents/menu/burguermenu/burguermenu.component.scss
@@ -1,7 +1,7 @@
 .colordetail {
   width: 100%;
   //background-color: #f8f8f8;
-  height: 15.7rem;
+  //height: 15.7rem;
   position: absolute;
   top: 48vh;
   z-index: -1;
@@ -21,3 +21,6 @@
 #droptutoriales:checked ~ [class*="area"] {
   display: block;
 }
+ ul li label:hover {
+   cursor: pointer;
+ }
