--- a/src/app/guudcomponents/menu/tutosmenu/tutosmenu.component.html
+++ b/src/app/guudcomponents/menu/tutosmenu/tutosmenu.component.html
@@ -1,11 +1,11 @@
 <div class="tutosmenu">
   <input type="checkbox" [(ngModel)]="activemenu" id="tutostrigger"/>
-  <label for="tutostrigger" i18n>Tutorial</label>
+  <label for="tutostrigger" style="width: 100%;" i18n>Tutorial</label>
   <ul class="tutoarea">
-    <li [routerLink]="'/welcome'" i18n>Welcome</li>
-    <li [routerLink]="'/calendars'" i18n>Calendar</li>
-    <li [routerLink]="'/tips'" i18n>Tips</li>
-    <li [routerLink]="'/workouts'" i18n>Workouts</li>
-    <li [routerLink]="'/sports'" i18n>Sports</li>
+    <li [routerLink]="'/welcome'"  (click)="activemenu=false;" i18n>Welcome</li>
+    <li [routerLink]="'/calendars'"  (click)="activemenu=false;" i18n>Calendar</li>
+    <li [routerLink]="'/tips'"  (click)="activemenu=false;" i18n>Tips</li>
+    <li [routerLink]="'/workouts'"  (click)="activemenu=false;" i18n>Workouts</li>
+    <li [routerLink]="'/sports'"  (click)="activemenu=false;" i18n>Sports</li>
   </ul>
 </div>
