--- a/src/app/views/caring/caring.component.html
+++ b/src/app/views/caring/caring.component.html
@@ -1,4 +1,4 @@
-<div class="displayshadow" style="height: unset;">
+<div class="displayshadow">
   <div class="display col-11 col-lg-10 col-xl-9 col-xxl-8 m-auto">
 <br>
     <div class="row" style="margin-bottom: -2rem;">
