Mejoras de tamaños de videos y zonas blancas

--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -11,9 +11,9 @@
   </div>
 </div -->
 
-<div [ngClass]="{'displayshadow':_apply}" style="background-color: ##c8c8c894;overflow-y: scroll;">
+<div [ngClass]="{'displayshadow':_apply}" style="background-color: ##c8c8c894;">
   <br><br><br>
-    <div class="guudvideo" style="height: 37.6rem;">
+    <div class="guudvideo">
       <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight" webkit-playsinline playsinline></video>
     </div>
       <div class="coachbanner m-auto">
