--- a/src/app/views/coach/coach.component.scss
+++ b/src/app/views/coach/coach.component.scss
@@ -1,13 +1,13 @@
 @media (max-width: 1244px) {
   .displayshadow{
     height: unset !important;
-    min-height: 123vh !important;
+    //min-height: 123vh !important;
   }
 }
 .coachbanner {
   position: relative;
-  width: 100%;
-  height: 11.8rem;
+  width: 90%;
+  min-height: 22vh;
   background-color: #000000;
   border-radius: 1.5rem;
   padding: 1rem;
@@ -32,7 +32,7 @@
     width: 34rem;
     color: #ffffff;
     text-align: center;
-    font-size: 3rem;
+    font-size: 4vh;
     img {
       height: 3rem;
     }
