--- a/src/app/views/tutorials/calendars/calendars.component.html
+++ b/src/app/views/tutorials/calendars/calendars.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'displayshadow':_apply}" style="background-color: ##c8c8c894;height: unset;" >
+<div [ngClass]="{'displayshadow':_apply}" style="background-color: ##c8c8c894;" >
   <br><br><br>
   <div class="guudvideo">
     <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight" webkit-playsinline playsinline></video>
