Revision aspectratio videos

--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -11,7 +11,7 @@
   </div>
 </div -->
 
-<div [ngClass]="{'displayshadow':_apply}" style="background-color: ##c8c8c894;">
+<div [ngClass]="{'displayshadow':_apply}" style="overflow-y: auto;">
   <br><br><br>
     <div class="guudvideo">
       <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight" webkit-playsinline playsinline></video>
