Ajustes de estilos en menu de tutoriales y funcionalidad eestetica al estar activa alguna seccion

--- a/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
+++ b/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
@@ -23,7 +23,7 @@
       <li [routerLink]="'/coach'" (click)="activeTutos=false;_menuOpened=false;" i18n>Coach</li>
       <li style="height: unset;">
         <input type="checkbox" id="droptutoriales" [(ngModel)]="activeTutos">
-        <label for="droptutoriales" style="width: 100%;" i18n>Tutorial</label>
+        <label for="droptutoriales" i18n>Tutorial</label>
         <div class="tutoarea">
           <ul class="tutos">
             <li [routerLink]="'/welcome'" (click)="activeTutos=false;_menuOpened=false;" i18n>Welcome</li>
