--- a/src/app/guudcomponents/menu/topbar/topbar.component.html
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.html
@@ -13,7 +13,7 @@
         <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/supplier"><span i18n>Supplier</span></div>
         <div class="col-1 webmenu" routerLinkActive="activeElement" routerLink="/coach"><span i18n>Coach</span></div>
         <div class="col-1 webmenu">
-          <guud-tutosmenu></guud-tutosmenu>
+          <guud-tutosmenu [currentRoute]="currentRoute"></guud-tutosmenu>
         </div>
         <!--div class="col-2 webmenu">
           <div class="row">
