Fix seccion de coach, se tapaba el banner

--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -13,7 +13,7 @@
 
 <div [ngClass]="{'displayshadow':_apply}" style="overflow-y: auto;">
   <br><br><br>
-    <div class="guudvideo">
+    <div class="guudvideo" style="height: 70vh;">
       <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight" webkit-playsinline playsinline></video>
     </div>
       <div class="coachbanner m-auto">
