--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -24,7 +24,7 @@
           <div class="row">
             <div class="col-12">
               <div class="row" id="join">
-                <div class="col-12" i18n style="transform: scale(1.4, 0.9);">BECOME A COACH</div>
+                <div class="col-12" i18n>BECOME A COACH</div>
               </div>
               <div class="row">
                 <div class="col-6"><a href="https://apps.apple.com/us/app/guud-coach/id6449237809"><img src="assets/logos_icons/AppStore.webp" alt="App Store"></a></div>
