--- a/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
+++ b/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
@@ -5,10 +5,10 @@
     <img alt="close" class="burgertoggler" id="closeburguer" src="assets/logos_icons/close.webp" width="25" height="25">
   </label>
   <div id="burgerdisplay">
-    <div class="langbutton" [routerLink]="'/es/'" i18n>
+    <!--div class="langbutton" [routerLink]="'/es/'" i18n>
       <img alt="langmenu" id="langicon" src="assets/logos_icons/sphere.webp"  width="35" height="35">
       <span>ES</span>
-    </div>
+    </div-->
     <!--div class="whitedecoration"></div-->
     <ul class="top">
       <li [routerLink]="'/'" (click)="activeTutos=false;_menuOpened=false;" i18n>Home</li>
