--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -11,9 +11,9 @@
   </div>
 </div -->
 
-<div [ngClass]="{'displayshadow':_apply}" style="overflow-y: auto;">
+<div [ngClass]="{'displayshadow':_apply}" style="height: 110vh;">
   <br><br><br>
-    <div class="guudvideo" style="height: 70vh;">
+    <div class="guudvideo" style="height: 80vh; margin-bottom: 1rem;width: 68vw;">
       <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight" webkit-playsinline playsinline></video>
     </div>
       <div class="coachbanner m-auto">
@@ -80,5 +80,5 @@
     </div>
   </div>
 
-<br><br><br>
+<br>
 </div>
