--- a/src/assets/guudstyles/guudstyles.scss
+++ b/src/assets/guudstyles/guudstyles.scss
@@ -83,9 +83,11 @@
 
 .guudvideo {
   position: relative;
-  height: 86vh;
-  width: 92%;
+  height: 85vh;
+  width: 73vw;
   margin: auto;
+  border-radius: 1.5rem;
+  overflow: hidden;
   [id*="videoplayerhistory"]{
     width: 100%;
     height: 100%;
