Se agregan videos procesados en Ingles de diferentes secciones

--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -4,7 +4,7 @@
       <div class="col-12">
         <h1 i18n style="margin-top: 2rem;">We are GUUD people,</h1>
         <h1 i18n style="margin-bottom: 3rem;">gathering the best knowledge for human well-being.</h1>
-        <h4 i18n><img class="inputdeco" src="assets/logos_icons/Arrow.webp" alt="clip" width="60" height="60"> The secrets of your future are hidden in your daily habits.</h4>
+        <!--h4 i18n><img class="inputdeco" src="assets/logos_icons/Arrow.webp" alt="clip" width="60" height="60"> The secrets of your future are hidden in your daily habits.</h4-->
         <h4 i18n style="line-height: 2.7rem;"><img alt="iconMission" src="assets/images/Our.webp" style="height: 2rem;filter: brightness(50%);"> <br> Create health, well-being and bring happiness to the world!</h4>
       </div>
     </div>
