Actualizacion con nuevo repo GarsaLabs

--- a/src/app/guudcomponents/individuales/imageplacer/imageplacer.component.html
+++ b/src/app/guudcomponents/individuales/imageplacer/imageplacer.component.html
@@ -35,4 +35,6 @@
   <img src="assets/phrases/Frase-3.webp" alt="GUUD Wishes" id="webphrase3" class="phrase animation ondisplay" i18n-alt i18n-src  width="450" height="374">
   <img src="assets/phrases/Frase-15.webp" alt="GUUD Wishes" id="webphrase15" class="phrase animation" i18n-alt i18n-src  width="450" height="428">
   <img src="assets/phrases/Frase-21.webp" alt="GUUD Wishes" id="webphrase21" class="phrase animation" i18n-alt i18n-src  width="318" height="450">
+
+  <img src="assets/phrases/newFrase-23.webp" alt="GUUD Wishes" id="webphrasenew23" class="phrase animation" i18n-alt i18n-src  width="450" height="116">
 </div>
