--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<guud-topbar *ngIf="currentRoute!='/terminos'" [currentRoute]="currentRoute" [isMobile]="isMobile"></guud-topbar>
+<guud-topbar [currentRoute]="currentRoute" [isMobile]="isMobile"></guud-topbar>
 <router-outlet></router-outlet>
-<ng-container *ngIf="currentRoute!='/terminos'">
-  <guud-footer *ngIf="(currentRoute!='/guudideas' && currentRoute!='/supplier') || isMobile == false"></guud-footer>
-</ng-container>
-<guudapp-modales *ngIf="currentRoute!='/terminos'"></guudapp-modales>
+<guud-footer *ngIf="(currentRoute!='/guudideas' && currentRoute!='/supplier') || isMobile == false"></guud-footer>
+<guudapp-modales></guudapp-modales>
