--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -22,7 +22,7 @@
       <div class="col-12 col-md-4">
         <img alt="iconCoreValues" src="assets/logos_icons/Core Values.webp" class="svgic" width="60" height="60">
         <h3 i18n style="color: #68e242;">Core values:</h3>
-        <h5 i18n style="line-height: 2.6rem;">Passion, Innovation & Humbleness</h5>
+        <h5 i18n style="line-height: 2.6rem;">Passion, Innovation & Teamwork</h5>
       </div>
     </div>
     <div class="row">
