--- a/src/app/views/terminos/terminos.component.scss
+++ b/src/app/views/terminos/terminos.component.scss
@@ -1,8 +1,8 @@
 .terminos {
-  width: 88%;
+  width: 80%;
   margin: auto;
-  margin-top: .6rem;
-  margin-bottom: 1.6rem;
+  margin-top: 6rem;
+  margin-bottom: 6rem;
 }
 h1{
   font-size: 2.5rem;
