--- a/src/app/views/terminos/terminos.component.scss
+++ b/src/app/views/terminos/terminos.component.scss
@@ -1,9 +1,10 @@
 .terminos {
   width: 90%;
   margin: auto;
-  margin-top: 0rem;
-  margin-bottom: 6rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 h1{
   font-size: 2.5rem;
+  line-height: 3rem;
 }
