--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -17,12 +17,12 @@
       <div class="col-12 col-md-4">
         <img alt="iconVision" src="assets/logos_icons/Visión.webp" class="svgic" width="90" height="90" style="margin-bottom: -1.9rem;position: relative;bottom: 0.8rem;">
         <h3 i18n style="color: #68e242;">Vision:</h3>
-        <h5 i18n style="line-height: 2.6rem;">Improve quality of life around the world.</h5>
+        <h5 i18n style="line-height: 2rem;">Let's find the Guud in YOU.</h5>
       </div>
       <div class="col-12 col-md-4">
         <img alt="iconCoreValues" src="assets/logos_icons/Core Values.webp" class="svgic" width="60" height="60">
         <h3 i18n style="color: #68e242;">Core values:</h3>
-        <h5 i18n style="line-height: 2.6rem;">Passion, Innovation & Teamwork</h5>
+        <h5 i18n style="line-height: 2.6rem;">Passion, Innovation & Humbleness</h5>
       </div>
     </div>
     <div class="row">
